# NSU_LEARNING

./: CMakeLists.txt
Calculator/: CMakeLists.txt  main.c  stack.h
Lab0/: Lab0.c
Lab1-0/: lab1-0.c
Lab2/: lab2.c
Lab3-1/: lab3-1.c
Lab4/: lab4.c
Lab6-0/: avltree.h  lab6-0.c
Lab7/: graph.c  graph.h  main.c  topSort.c  topSort.h
Lab8-0/: graph.c  graph.h  kruskal.c  kruskal.h  main.c
Lab8-1/: graph.c  graph.h  main.c  prim.c  prim.h
Lab9/: dijkstra.c  dijkstra.h  graph.c  graph.h  main.c
huffman/: CMakeLists.txt  main.c
kosaraju/: graph.c  graph.h  main.c  stack.c  stack.h
